[package]
name = "knowledge-library"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.7"
hyper = { version = "0.14", features = ["server", "http1", "http2", "tcp"] }
tokio = { version = "1", features = ["full"] }
tokio-stream = {version = "0.1"}
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.7", features = ["postgres", "runtime-tokio", "migrate", "uuid", "chrono"] }
dotenvy = "0.15"
tower-http = { version = "0.5", features = ["cors", "trace"] }
jsonwebtoken = "9" # JWT authentication
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }